kubernetes-gateway-api-hands-on/exercises/06-request-mirroring/exercise/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mirror-route
  namespace: gateway-lab
spec:
  parentRefs:
    - name: lab-gateway
  hostnames:
    - mirror.gateway.local
  rules:
    - backendRefs:
        - name: ________
          port: 8080
      filters:
        - type: ________
          requestMirror:
            backendRef:
              name: ________
              port: 8080
